...
                      }
                }

                SaveButton(
                    onSaveClick = { isExerciseSelected = true },
                    text = "Train",
                    testTag = "saveButton")
              }
        } else {
          if (showInfoDialogue) {
            firstTime.value = false
            CoachInfoDialogue { showInfoDialogue = false }
          }
...
                                isRecordingInCamera = true
                              }
                            },
                            title =
                                if (isRecordingInCamera) "Stop"
                                else if (userHasRecorded) "Feedback" else "Record",
                            testTag = "recordButton",
                            size = 85.dp)

                        // See joints button
                        IconButton(
                            onClick = { jointPositionRequested = jointPositionRequested.not() },
                            modifier = smallButtonModifier.testTag("jointsButton")) {
...
